enum PaymentStatus {
  initiated,
  approved,
  declined,
  error,
}
